chore: removing custom exception types and improving error handling